update retrieval router detials
